[tool.poetry]
name = "labby"
version = "0.0.1"
description = "An utility for controlling laboratory equipment"
license = "MIT"
readme = "README.md"
homepage = "https://github.com/luizribeiro/labby/"
repository = "https://github.com/luizribeiro/labby/"
authors = [
  "Luiz Ribeiro <luizribeiro@gmail.com>",
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Topic :: Software Development :: Build Tools",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3.7",
  "Programming Language :: Python :: 3.8",
]
keywords = [
  "experiments",
  "instruments",
  "lab automation",
  "laboratory",
  "science",
]

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/luizribeiro/labby/issues"

[tool.poetry.scripts]
labby = 'labby.cli:main'

[tool.poetry.dependencies]
python = "^3.7.1"
mashumaro = "2.11"
pandas = "1.5.3"
pynng = "0.8.0"
pyre-extensions = "0.0.30"
pyserial = "3.5"
strictyaml = "1.7.3"
typed-argument-parser = "1.9.0"
wasabi = "0.10.1"

[tool.poetry.dev-dependencies]
flake8 = "4.0.1"
freezegun = "1.4.0"
green = "3.5.0"
pre-commit = "2.21.0"
pyre-check = "0.9.19"
python-language-server = "0.36.2"
black = "22.12.0"

[build-system]
requires = ["poetry>=1.0.10"]
build-backend = "poetry.masonry.api"
